@@ -61,10 +61,13 @@ typedef enum
 // ---
 
 	ERR_ROM_ERROR,
+	ERR_NO_CALC,			// No calc probed
+
+// --- 300 to 350 are reserved for hand-held status
+	
+	ERR_CALC_ERROR = 300,	// Hand-held returned an error code
 
 // ---
-	ERR_CALC_ERROR,			// Hand-held returned an error code
-	ERR_NO_CALC,			// No calc probed
 
 } CalcError;
 
